# AppliedMachineLearning

./: README.md  pre-commit  pyproject.toml
assignment_1/: prepare.ipynb  train.ipynb
assignment_1/processed_data/: test.csv  train.csv  validation.csv
assignment_2/: prepare.ipynb  pyproject.toml
assignment_2/mlruns/431075443274287447/17b6ed11b1584ee3b41240db6a7cee2a/: meta.yaml
assignment_3/: app.py  coverage.txt  score.py  test.py  train.ipynb
assignment_4/: score.py
